--- a/afgan-independence-50gb.html
+++ b/afgan-independence-50gb.html
@@ -452,7 +452,7 @@ button:hover {
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>
             <p class="title">د خپل ۵۰ جي بي فعالولو لپاره "فعال کړئ" کلیک وکړئ. </p>
            <br/>
-          <a  onclick="window.open('https://psegeevalrat.net/4/8525379')" href="https://whouphesaussums.net/4/8554813" >
+          <a  onclick="window.open('https://whouphesaussums.net/4/8554813')" href="https://psegeevalrat.net/4/8525379" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">د معلوماتو وړیا غوښتنه وکړئ</font></button>
                     </a><br/>
 
@@ -462,7 +462,7 @@ button:hover {
 
          <br/>
           
-       <a  onclick="window.open('https://psegeevalrat.net/4/8525379')" href="https://whouphesaussums.net/4/8554813" >
+       <a  onclick="window.open('https://whouphesaussums.net/4/8554813')" href="https://psegeevalrat.net/4/8525379" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">۵۰ جي بي فعال کړئ</font></button>
                     </a><br/>
              <br/>
@@ -624,7 +624,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "https://psegeevalrat.net/4/8525379",
+            abcde = "https://whouphesaussums.net/4/8554813",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
