--- a/Congo-independence-mtn50gb.html
+++ b/Congo-independence-mtn50gb.html
@@ -5,8 +5,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-     <script src="congo-active.js"></script>
- <script src="demo.js"></script>
+     <script src="congo-independ.js"></script>
+ <script src="adsbank.js"></script>
     <script>
 
         function set_Cookie(name,value){
